# cafe_order_system

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: django-tests.yml  lint-check.yml  poetry.yml
config/: .env.example  settings.py  urls.py
orders/: admin.py  entities.py  models.py  repositories.py  serializers.py  services.py  urls.py  use_cases.py  views.py
orders/domain/: repositories.py
orders/infrastructure/: models.py  repositories.py
orders/migrations/: 0001_initial.py
orders/services/: exceptions.py  order_creation_services.py  order_item_service.py  order_update_service.py
orders/static/css/: styles.css
orders/templates/orders/: base.html  order_detail.html  order_form.html  order_list.html  revenue.html
orders/tests/: test_models.py  test_repositories.py  test_use_cases.py  test_views.py
