[tool.poetry]
name = "cafe-order-system"
version = "0.1.0"
description = ""
authors = ["Bojchenko-Konstantin <Bojchenko_k@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
black = "^25.1.0"
django-stubs = "^5.1.3"
flake8 = "^7.1.1"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
skip-string-normalization = true   

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
